# SummerInternship2021

./: .gitignore  CMakeLists.txt  ExtremaFinding.cpp  ExtremaFinding.h  README.md  best_results.txt  compile.sh  grader.cpp  log.txt  run.sh  test.cpp  test.sh  test_force_constants.txt
ExtremaFinding/: GlobalMinimumFinder.cpp  GlobalMinimumFinder.h  LocalMinimaFinder.cpp  LocalMinimaFinder.h
development/Simplicity-Accuracy/: test.sh
development/main/: test.cpp  test.sh
lib/SimplicityAccuracy/: SimplicityAccuracy.cpp  SimplicityAccuracy.h
lib/numerical_recipes/: amoeba.cpp  amotry.cpp  golden.cpp  mnbrak.cpp  nrtypes_nr.h  nrutil_nr.h  powell.cpp  powell_intra.cpp
src/: README.md  main.cpp  main.sh  variables.txt
src/ExtremaFinding/: ForceConstantFinder.cpp  ForceConstantFinder.h  GlobalMinimumFinder.cpp  GlobalMinimumFinder.h  LocalMinimaFinder.cpp  LocalMinimaFinder.h
src/ObjectiveFunctions/: ObjectiveFunctions.cpp  ObjectiveFunctions.h
src/SimplicityAccuracy/: SimplicityAccuracy.cpp
src/numerical_recipes/: brent.cpp  f1dim.cpp  frprmn.cpp  linmin.cpp  nr.h  nrexit.cpp  nrutil_mtl.h  nrutil_tnt.h  nrutil_val.h
test/Sandbox/: test.cpp  test.sh  variables.txt
test/Simplicity-Accuracy/: test.cpp  test.sh
test/main/: test.cpp  test.sh
